--- a/Python Fundamentals/Module_2.0_Tutorials_Sequence_Lists_Python_Fundamentals.ipynb
+++ b/Python Fundamentals/Module_2.0_Tutorials_Sequence_Lists_Python_Fundamentals.ipynb
@@ -1450,31 +1450,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the price of items or \"done\": 6\n",
       "Enter the price of items or \"done\": 5\n",
       "Enter the price of items or \"done\": 4\n",
       "Enter the price of items or \"done\": 3\n",
       "Enter the price of items or \"done\": 2\n",
       "Enter the price of items or \"done\": 1\n",
       "Enter the price of items or \"done\": done\n",
-      "['6', '5', '4', '3', '2', '1']\n"
+      "['5', '4', '3', '2', '1']\n"
      ]
     }
    ],
    "source": [
     "#[ ] complete the Register Input task above\n",
     "purchase_amounts = []\n",
-    "user_input = input(\"Enter the price of items or \\\"done\\\": \")\n",
-    "while user_input != \"done\": \n",
-    "    purchase_amounts.append(user_input)\n",
+    "while True: \n",
     "    user_input = input(\"Enter the price of items or \\\"done\\\": \")\n",
+    "    if user_input.isdigit(): \n",
+    "        purchase_amounts.append(user_input)\n",
+    "    elif user_input == \"done\": \n",
+    "        break \n",
+    "    else: \n",
+    "        print(\"Invalid Input\")\n",
     "print(purchase_amounts)\n"
    ]
   },
@@ -1497,26 +1500,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "'function call' is an illegal expression for augmented assignment (2754200329.py, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[88], line 5\u001b[1;36m\u001b[0m\n\u001b[1;33m    purchase_amount.pop() += subtotal\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m 'function call' is an illegal expression for augmented assignment\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15.0\n"
      ]
     }
    ],
    "source": [
     "# [ ] complete the Register Total task above\n",
     "subtotal = 0\n",
-    "while purchase_amount: \n",
-    "    purchase_amount.pop()\n",
-    "    purchase_amount.pop() += subtotal\n",
-    "print(subtotal)\n",
-    "    \n"
+    "while purchase_amounts: \n",
+    "    num_1 = float(purchase_amounts.pop())\n",
+    "    subtotal += num_1\n",
+    "print(subtotal)\n"
    ]
   },
   {
@@ -1544,9 +1545,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lab', 'Poodle']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "dog_types = [\"Lab\", \"Pug\", \"Poodle\"]\n",
@@ -1560,11 +1569,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lab', 'Pug', 'Poodle', 'Poodle', 'Pug', 'Poodle']\n",
+      "['Lab', 'Pug', 'Poodle', 'Pug', 'Poodle']\n",
+      "['Lab', 'Pug', 'Pug', 'Poodle']\n",
+      "['Lab', 'Pug', 'Pug']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "dogs = [\"Lab\", \"Pug\", \"Poodle\", \"Poodle\", \"Pug\", \"Poodle\"]\n",
@@ -1584,13 +1604,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Pug', 'Pug']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] review and run example\n",
     "# Change to \"Lab\", etc... to fix error\n",
-    "dogs.remove(\"Collie\")\n",
+    "dogs.remove(\"Lab\")\n",
     "print(dogs)"
    ]
   },
@@ -1607,14 +1635,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Lab', 'Pug', 'Poodle', 'Poodle', 'Pug', 'Poodle']\n",
+      "['Lab', 'Pug', 'Poodle', 'Pug', 'Poodle']\n"
+     ]
+    }
+   ],
    "source": [
     "# [ ] remove one \"Poodle\" from the list: dogs , or print \"no Poodle found\"\n",
     "# [ ] print list before and after\n",
     "dogs = [\"Lab\", \"Pug\", \"Poodle\", \"Poodle\", \"Pug\", \"Poodle\"]\n",
-    "\n"
+    "print(dogs)\n",
+    "if \"Poodle\" in dogs: \n",
+    "    dogs.remove(\"Poodle\")\n",
+    "else: \n",
+    "    print(\"No Poodle found\")\n",
+    "print(dogs)\n"
    ]
   },
   {
